problèmes de css qui empéchaient Jules de dormir

--- a/view/home.twig
+++ b/view/home.twig
@@ -17,41 +17,36 @@
       <div class="container" data-aos="fade-up">
 
             <div class="row gy-4 liste-container" data-aos="fade-up" data-aos-delay="200">
-
                 <div class="col-lg-4 col-md-6 liste-item filter-app">
                     <div class="liste-wrap">
-                        <img src="Img/banniere1.jpg" class="img-fluid" alt="">
-                        <div class="liste-info">
-                            <h4>Boissons</h4>
-                            <div class="liste-links">
-                                <a href="index.php?action=products&category=1" title="Voir Plus"><i class="bi bi-link"></i></a>
+                        <img src="Img/category-drink.jpg" class="img-fluid" alt="photo de boisson">
+                        <a href="index.php?action=products&category=1" title="Voir Plus">
+                            <div class="liste-info">
+                                <h4>Boissons</h4>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 liste-item filter-web">
                     <div class="liste-wrap">
-                        <img src="Img/banniere2.jpg" class="img-fluid" alt="">
-                        <div class="liste-info">
-                            <h4>Biscuits</h4>
-                            <div class="liste-links">
-                                <a href="index.php?action=products&category=2" title="Voir Plus"><i class="bi bi-link"></i></a>
+                        <img src="Img/category-biscuit.jpg" class="img-fluid" alt="photo de biscuit">
+                        <a href="index.php?action=products&category=2" title="Voir Plus">
+                            <div class="liste-info">
+                                <h4>Biscuits</h4>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
 
-
                 <div class="col-lg-4 col-md-6 liste-item filter-web">
                     <div class="liste-wrap">
-                        <img src="Img/banniere3.jpg" class="img-fluid" alt="">
-                        <div class="liste-info">
-                            <h4>Fruits secs</h4>
-                            <div class="liste-links">
-                                <a href="index.php?action=products&category=3" title="Voir Plus"><i class="bi bi-link"></i></a>
+                        <img src="Img/category-dried-fruit.jpg" class="img-fluid" alt="photo de fruit sec">
+                        <a href="index.php?action=products&category=3" title="Voir Plus">
+                            <div class="liste-info">
+                                <h4>Fruits secs</h4>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
