--- a/Style/Style.css
+++ b/Style/Style.css
@@ -6,6 +6,11 @@ body {
   padding: 0;
 }
 
+/* Header */
+header nav img {
+  height: 40px;
+}
+
 /* liste Section Styles */
 .liste .liste-wrap {
 transition: 0.3s;
@@ -13,6 +18,7 @@ position: relative;
 overflow: hidden;
 z-index: 1;
 background: rgba(255, 255, 255, 0.75);
+display: flex;
 }
 
 .liste .liste-wrap img {
