réorganisation du dossier assets

--- a/view/home.twig
+++ b/view/home.twig
@@ -19,7 +19,7 @@
             <div class="row gy-4 liste-container" data-aos="fade-up" data-aos-delay="200">
                 <div class="col-lg-4 col-md-6 liste-item filter-app">
                     <div class="liste-wrap">
-                        <img src="Img/category-drink.jpg" class="img-fluid" alt="photo de boisson">
+                        <img src="assets/img/category-drink.jpg" class="img-fluid" alt="photo de boisson">
                         <a href="index.php?action=products&category=1" title="Voir Plus">
                             <div class="liste-info">
                                 <h4>Boissons</h4>
@@ -30,7 +30,7 @@
 
                 <div class="col-lg-4 col-md-6 liste-item filter-web">
                     <div class="liste-wrap">
-                        <img src="Img/category-biscuit.jpg" class="img-fluid" alt="photo de biscuit">
+                        <img src="assets/img/category-biscuit.jpg" class="img-fluid" alt="photo de biscuit">
                         <a href="index.php?action=products&category=2" title="Voir Plus">
                             <div class="liste-info">
                                 <h4>Biscuits</h4>
@@ -41,7 +41,7 @@
 
                 <div class="col-lg-4 col-md-6 liste-item filter-web">
                     <div class="liste-wrap">
-                        <img src="Img/category-dried-fruit.jpg" class="img-fluid" alt="photo de fruit sec">
+                        <img src="assets/img/category-dried-fruit.jpg" class="img-fluid" alt="photo de fruit sec">
                         <a href="index.php?action=products&category=3" title="Voir Plus">
                             <div class="liste-info">
                                 <h4>Fruits secs</h4>
