--- a/view/partial/header.twig
+++ b/view/partial/header.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="index.php?action=home">
-        <img src="Img/Web4ShopHeader.png" alt="Logo Web4Shop">
+        <img src="assets/img/Web4ShopHeader.png" alt="Logo Web4Shop">
     </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
