--- a/view/productDetails.twig
+++ b/view/productDetails.twig
@@ -5,7 +5,7 @@
 
     <div class="container">
         <div class="product-details">
-            <img class="product-image" src="Img/{{ product.image }}" alt="{{ product.name }}">
+            <img class="product-image" src="assets/img/{{ product.image }}" alt="{{ product.name }}">
             <div class="product-info">
                 <h1>{{ product.name }}</h1>
                 <p>{{ product.description }}</p>
