--- a/view/productDetails.twig
+++ b/view/productDetails.twig
@@ -13,7 +13,9 @@
                 <p>Quantité : {{ product.quantity }}</p>
                 <div class="product-action">
                     <input type="number" min="1" max="{{ product.quantity }}" value="1">
-                    <button>Ajouter au panier</button>
+                    <button>
+                        <img src="assets/icon/shopping-cart.svg" alt="icone panier" title="Ajouter au panier">
+                    </button>
                 </div>
             </div>
         </div>
