--- a/view/products.twig
+++ b/view/products.twig
@@ -26,7 +26,7 @@
 
                 <div class="row gy-4">
                     {% for product in products %}
-                        <div id="product-card" class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="100">
+                        <div class="col-lg-4 col-md-6 product-card" data-aos="zoom-in" data-aos-delay="100">
                             <div class="liste-wrap">
                                 <img src="assets/img/{{product.image}}" class="img-fluid" alt="">
                                 <a href="index.php?action=products&id={{ product.id }}" title="Voir plus">
