--- a/Style/Style.css
+++ b/Style/Style.css
@@ -13,79 +13,79 @@ header nav img {
 
 /* liste Section Styles */
 .liste .liste-wrap {
-transition: 0.3s;
-position: relative;
-overflow: hidden;
-z-index: 1;
-background: rgba(255, 255, 255, 0.75);
-display: flex;
+  transition: 0.3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  background: rgba(255, 255, 255, 0.75);
+  display: flex;
 }
 
 .liste .liste-wrap img {
-transition: 1s;
-height: 300px;
-margin: 0 auto;
+  transition: 1s;
+  height: 300px;
+  margin: 0 auto;
 }
 
 .liste .liste-wrap .liste-info {
-opacity: 0;
-position: absolute;
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
-text-align: center;
-z-index: 3;
-transition: all ease-in-out 0.3s;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+  z-index: 3;
+  transition: all ease-in-out 0.3s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 
 .liste .liste-wrap .liste-info p {
-color: #012970;
-font-weight: 600;
-font-size: 14px;
-text-transform: uppercase;
-padding: 0;
-margin: 0;
+  color: #012970;
+  font-weight: 600;
+  font-size: 14px;
+  text-transform: uppercase;
+  padding: 0;
+  margin: 0;
 }
 
 .liste .liste-wrap .liste-links {
-text-align: center;
-z-index: 4;
+  text-align: center;
+  z-index: 4;
 }
 
 .liste .liste-wrap .liste-links a {
-color: #fff;
-background: #4154f1;
-margin: 10px 2px;
-width: 36px;
-height: 36px;
-display: inline-flex;
-align-items: center;
-justify-content: center;
-border-radius: 50%;
-transition: 0.3s;
+  color: #fff;
+  background: #4154f1;
+  margin: 10px 2px;
+  width: 36px;
+  height: 36px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  transition: 0.3s;
 }
 
 .liste .liste-wrap .liste-links a i {
-font-size: 24px;
-line-height: 0;
+  font-size: 24px;
+  line-height: 0;
 }
 
 .liste .liste-wrap .liste-links a:hover {
-background: #5969f3;
+  background: #5969f3;
 }
 
 .liste .liste-wrap:hover img {
-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .liste .liste-wrap:hover .liste-info {
-opacity: 1;
+  opacity: 1;
 }
 
 .liste .liste-wrap::before {
@@ -138,23 +138,24 @@ opacity: 1;
 }
 
 /* Product Details Styles */
+
 .product-card {
   margin: 10px 0;
 }
 
 .product-details h4 {
-font-size: 20px;
-color: #012970;
-font-weight: 700;
+  font-size: 20px;
+  color: #012970;
+  font-weight: 700;
 }
 
 .product-details p {
-color: #012970;
-font-weight: 600;
-font-size: 14px;
-text-transform: uppercase;
-padding: 0;
-margin: 0;
+  color: #012970;
+  font-weight: 600;
+  font-size: 14px;
+  text-transform: uppercase;
+  padding: 0;
+  margin: 0;
 }
 
 .product-card .product-details > div {
@@ -168,10 +169,51 @@ margin: 0;
   border-radius: 5px;
 }
 
-/* .product-details button:hover {
-background: #5969f3;
-} */
-
 .mt-5 {
   margin-top: 3rem;
+}
+
+
+/* Login */
+
+#loginPage {
+  margin: 50px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #5bc0de;
+  border-radius: 5px;
+}
+
+#loginPage > div {
+  display: flex;
+}
+
+#loginPage h1 {
+  margin: 10px 0;
+}
+
+#loginPage label {
+  display: block;
+  margin: 8px 0 0 0;
+}
+
+#loginPage input {
+  display: block;
+}
+
+#loginPage input[type="submit"] {
+  margin: 10px auto;
+}
+
+#loginPage a {
+  color: #0056b3;
+}
+
+
+/* Footer */
+
+footer p {
+  margin: 0;
 }
