--- a/view/Login.twig
+++ b/view/Login.twig
@@ -1,19 +1,19 @@
-{% extends "layout/base.twig" %}
+{% extends "partial/loginPage.twig" %}
 
-{% block content %}
+{% block loginForm %}
 
-    <h1>Connexion</h1>
+<h1>Connexion</h1>
 
-    <form method="post" action="index.php?action=login">
-        <label for="login">Nom d'utilisateur :</label>
-        <input type="text" id="login" name="login" required>
-        <br>
-        <label for="mdp">Mot de passe :</label>
-        <input type="password" id="mdp" name="mdp" required>
-        <br>
-        <button type="submit">Se connecter</button>
-    </form>
+<form method="post" action="index.php?action=login">
+    <label for="login">Nom d'utilisateur :</label>
+    <input type="text" id="login" name="login" required>
 
-    <p>Pas encore de compte ? <a href="index.php?action=register">Inscrivez-vous ici</a>.</p>
+    <label for="mdp">Mot de passe :</label>
+    <input type="password" id="mdp" name="mdp" required>
+
+    <input type="submit" value="Se connecter">
+</form>
+
+<p>Pas encore de compte ? <a href="index.php?action=register">Inscrivez-vous ici</a>.</p>
 
 {% endblock %}
