--- a/view/layout/base.twig
+++ b/view/layout/base.twig
@@ -7,6 +7,7 @@
             {% block title %}{% endblock %}
         </title>
         <link rel="stylesheet" href="style/style.css" />
+        <link rel="stylesheet" href="style/loginPage.css" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     </head>
 
