--- a/view/register.twig
+++ b/view/register.twig
@@ -2,50 +2,52 @@
 
 {% block loginForm %}
 
-<h1>Inscription</h1>
+	<h1>Inscription</h1>
 
-<form method="post" action="index.php?action=register">
-    <input type="hidden" name="action" value="register">
+	<form method="post" action="index.php?action=register">
+		<input type="hidden" name="action" value="register">
 
-    <div>
-        <div>
-            <label for="forname">Prénom :</label>
-            <input type="text" id="forname" name="forname" required>
-        </div>
-        <div>
-            <label for="surname">Nom :</label>
-            <input type="text" id="surname" name="surname" required>
-        </div>
-    </div>
+		<div>
+			<div>
+				<label for="forname">Prénom :</label>
+				<input type="text" id="forname" name="forname" required>
 
-    <label for="phone">Téléphone :</label>
-    <input type="text" id="phone" name="phone" required>
+				<label for="surname">Nom :</label>
+				<input type="text" id="surname" name="surname" required>
 
-    <label for="email">Email :</label>
-    <input type="email" id="email" name="email" required>
+				<label for="phone">Téléphone :</label>
+				<input type="text" id="phone" name="phone" required>
 
-    <label for="add1">Adresse 1 :</label>
-    <input type="text" id="add1" name="add1" required>
+				<label for="email">Email :</label>
+				<input type="email" id="email" name="email" required>
+			</div>
 
-    <label for="add2">Adresse 2 :</label>
-    <input type="text" id="add2" name="add2">
+			<div>
+				<label for="add1">Adresse 1 :</label>
+				<input type="text" id="add1" name="add1" required>
 
-    <label for="city">Ville :</label>
-    <input type="text" id="city" name="city" required>
+				<label for="add2">Adresse 2 :</label>
+				<input type="text" id="add2" name="add2">
 
-    <label for="postcode">Code postal :</label>
-    <input type="text" id="postcode" name="postcode" required>
+				<label for="city">Ville :</label>
+				<input type="text" id="city" name="city" required>
 
-    <label for="username">Nom d'utilisateur :</label>
-    <input type="text" id="username" name="username" required>
+				<label for="postcode">Code postal :</label>
+				<input type="text" id="postcode" name="postcode" required>
+			</div>
+		</div>
 
-    <label for="password">Mot de passe :</label>
-    <input type="password" id="password" name="password" required>
+		<label for="username">Nom d'utilisateur :</label>
+		<input type="text" id="username" name="username" required>
 
-    <input type="submit" value="S'inscrire">
-</form>
+		<label for="password">Mot de passe :</label>
+		<input type="password" id="password" name="password" required>
 
-<p>Déjà inscrit ? <a href="index.php?action=login">Connectez-vous ici</a>.</p>
+		<input type="submit" value="S'inscrire">
+	</form>
+
+	<p>Déjà inscrit ?
+		<a href="index.php?action=login">Connectez-vous ici</a>.</p>
 
 
 {% endblock %}
