--- a/view/register.twig
+++ b/view/register.twig
@@ -43,11 +43,10 @@
 		<label for="password">Mot de passe :</label>
 		<input type="password" id="password" name="password" required>
 
-		<input type="submit" value="S'inscrire">
+		<input type="submit" value="S'inscrire" class="btn btn-light">
 	</form>
 
-	<p>Déjà inscrit ?
-		<a href="index.php?action=login">Connectez-vous ici</a>.</p>
+	<p>Déjà inscrit ?<a href="index.php?action=login">Connectez-vous ici</a>.</p>
 
 
 {% endblock %}
