--- a/view/registerAdmin.twig
+++ b/view/registerAdmin.twig
@@ -1,19 +1,16 @@
-{% extends "layout/base.twig" %}
+{% extends "partial/loginPage.twig" %}
 
-{% block content %}
+{% block loginForm %}
 
-    <div class="container">
-        <h2>Inscription Admin</h2>
-        <form action="index.php?action=registerAdmin" method="post">
-            <div class="form-group">
-                <label for="username">Nom d'utilisateur:</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Mot de passe:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="submit" class="btn btn-primary">S'inscrire</button>
-        </form>
-    </div>
+	<h2>Inscription Admin</h2>
+
+	<form action="index.php?action=registerAdmin" method="post">
+		<label for="username">Nom d'utilisateur :</label>
+		<input type="text" id="username" name="username" required>
+
+		<label for="password">Mot de passe :</label>
+		<input type="password" id="password" name="password" required>
+
+		<input type="submit" value="S'inscrire" class="btn btn-light">
+	</form>
 {% endblock %}
