--- a/view/products.twig
+++ b/view/products.twig
@@ -8,9 +8,9 @@
 
             <div class="container" data-aos="fade-up">
 
-                <header class="section-header">
+                <div class="section-header">
                      <h2>Liste Produits</h2>
-                </header>
+                </div>
                 
                 <form method="get" action="index.php">
                     <input type="hidden" name="action" value="products">
