--- a/view/cart.twig
+++ b/view/cart.twig
@@ -18,16 +18,18 @@
                 <tbody>
                     {% set total = 0 %}
                     {% for itemId, item in cart %}
-                        {% set total = total + item.product.price * item.quantity %}
+                        {% set total = total + item.price * item.quantity %}
                         <tr>
-                            <td>{{ item.product.name }}</td>
+                            <td>{{ item.name }}</td>
                             <td>{{ item.quantity }}</td>
-                            <td>{{ item.product.price }} €</td>
-                            <td>{{ item.product.price * item.quantity }} €</td>
+                            <td>{{ item.price }} €</td>
+                            <td>{{ item.price * item.quantity }} €</td>
                             <td>
-                                <form method="post" action="index.php?action=removeFromCart">
-                                    <input type="hidden" name="id" value="{{ itemId }}">
-                                    <button type="submit" class="btn btn-danger">Supprimer</button>
+                                <form method="post" action="index.php?action=cart">
+                                    <input type="hidden" name="productIdToDelete" value="{{ item.id }}">
+                                    <button type="submit" class="btn btn-danger">
+                                        <img src="assets/icon/trash.svg" alt="Supprimer" title="supprimer" width="16" height="16">
+                                    </button>
                                 </form>
                             </td>
                         </tr>
