--- a/Style/productDetails.css
+++ b/Style/productDetails.css
@@ -56,6 +56,8 @@
     object-fit: cover;
 }
 
+/* Product infos */
+
 .product-info {
     width: 50%;
     padding: 20px;
@@ -65,4 +67,22 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.product-action > div {
+    flex: 2;
+}
+
+.product-action form {
+    flex: 1;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.product-action form input {
+    width: 50px;
+    padding: 5px;
+    border-radius: 5px;
+    text-align: center;
 }
