--- a/view/productDetails.twig
+++ b/view/productDetails.twig
@@ -1,64 +1,68 @@
 {% extends "layout/base.twig" %}
 
 {% block content %}
-    <link rel="stylesheet" href="style/productDetails.css">
+	<link rel="stylesheet" href="style/productDetails.css">
 
-    <div class="container mt-5">
-        <div class="product-details row">
-            <img class="product-image col-md-6" src="assets/img/{{ product.image }}" alt="{{ product.name }}">
-            <div class="product-info col-md-6">
-                <h1>{{ product.name }}</h1>
-                <p>{{ product.description }}</p>
-                <p>Prix : {{ product.price }} €</p>
-                <p>Quantité disponible : {{ product.quantity }}</p>
-                <div class="product-action">
-                    <input type="number" class="form-control" min="1" max="{{ product.quantity }}" value="1">
-                    <button class="btn btn-primary">
-                        <img src="assets/icon/shopping-cart.svg" alt="icone panier" title="Ajouter au panier">
-                        Ajouter au panier
-                    </button>
-                </div>
-            </div>
-        </div>
+	<div class="container mt-5">
+		<div class="product-details row">
+			<img class="product-image col-md-6" src="assets/img/{{ product.image }}" alt="{{ product.name }}">
+			<div class="product-info col-md-6">
+				<h1>{{ product.name }}</h1>
+				<p>{{ product.description }}</p>
+				<div class="product-action">
+					<div>
+						<p>Prix : {{ product.price }}€</p>
+						<p>Quantité disponible : {{ product.quantity }}</p>
+					</div>
+					<form method="post">
+                        <input type="hidden" name="id" value="{{ product.id }}">
+						<input type="number" name="quantity" class="form-control" min="1" max="{{ product.quantity }}" value="1">
+						<button type="submit" class="btn">
+							<img src="assets/icon/shopping-cart.svg" alt="icone panier" title="Ajouter au panier">
+						</button>
+					</form>
+				</div>
+			</div>
+		</div>
 
-        <h2 class="mt-5">Avis des acheteurs</h2>
-        {% for review in reviews %}
-            <div class="review">
-                <h3>{{ review.title }}</h3>
-                <p>Par {{ review.name_user }}</p>
-                <p>{{ review.description }}</p>
-                <p>Note : {{ review.stars }}/5</p>
-            </div>
-        {% endfor %}
-        
-        <div class="add-review mt-4">
-            <h2>Ajouter un commentaire</h2>
-            <form action="index.php?action=addReview" method="post">
-                <input type="hidden" name="productId" value="{{ product.id }}">
-                <div class="form-group">
-                    <label for="name">Votre nom :</label>
-                    <input type="text" class="form-control" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="stars">Votre note :</label>
-                    <select class="form-control" name="stars" required>
-                        <option value="1">1 étoile</option>
-                        <option value="2">2 étoiles</option>
-                        <option value="3">3 étoiles</option>
-                        <option value="4">4 étoiles</option>
-                        <option value="5">5 étoiles</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="title">Titre du commentaire :</label>
-                    <input type="text" class="form-control" name="title" required>
-                </div>
-                <div class="form-group">
-                    <label for="description">Votre commentaire :</label>
-                    <textarea class="form-control" name="description" required></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Ajouter le commentaire</button>
-            </form>
-        </div>
-    </div>
+		<h2 class="mt-5">Avis des acheteurs</h2>
+		{% for review in reviews %}
+			<div class="review">
+				<h3>{{ review.title }}</h3>
+				<p>Par{{ review.name_user }}</p>
+				<p>{{ review.description }}</p>
+				<p>Note :{{ review.stars }}/5</p>
+			</div>
+		{% endfor %}
+
+		<div class="add-review mt-4">
+			<h2>Ajouter un commentaire</h2>
+			<form action="index.php?action=addReview" method="post">
+				<input type="hidden" name="productId" value="{{ product.id }}">
+				<div class="form-group">
+					<label for="name">Votre nom :</label>
+					<input type="text" class="form-control" name="name" required>
+				</div>
+				<div class="form-group">
+					<label for="stars">Votre note :</label>
+					<select class="form-control" name="stars" required>
+						<option value="1">1 étoile</option>
+						<option value="2">2 étoiles</option>
+						<option value="3">3 étoiles</option>
+						<option value="4">4 étoiles</option>
+						<option value="5">5 étoiles</option>
+					</select>
+				</div>
+				<div class="form-group">
+					<label for="title">Titre du commentaire :</label>
+					<input type="text" class="form-control" name="title" required>
+				</div>
+				<div class="form-group">
+					<label for="description">Votre commentaire :</label>
+					<textarea class="form-control" name="description" required></textarea>
+				</div>
+				<button type="submit" class="btn btn-primary">Ajouter le commentaire</button>
+			</form>
+		</div>
+	</div>
 {% endblock %}
