--- a/view/Login.twig
+++ b/view/Login.twig
@@ -14,6 +14,6 @@
 		<input type="submit" value="Se connecter" class="btn btn-light">
 	</form>
 
-	<p>Pas encore de compte ?<a href="index.php?action=register">Inscrivez-vous ici</a>.</p>
+	<p>Pas encore de compte ? <a href="index.php?action=register">Inscrivez-vous ici</a></p>
 
 {% endblock %}
